<resources>
    <string name="app_name">jsonPhonebook</string>
    <string name="list_of_contacts">Список контактов</string>
    <string name="add_contact">Добавить контакт</string>
    <string name="show_contacts">Показать все контакты</string>
    <string name="name">Имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="add">Добавить</string>
    <string name="all_contacts">Все контакты</string>
</resources>